refacto(field): CO-1691 remove magic string (#9)
Co-authored-by: Benard Bastien <bastien.benard@cgi.com>